Fix collapse/expand bug in admin/codes

--- a/app/assets/stylesheets/partials/_lists.sass
+++ b/app/assets/stylesheets/partials/_lists.sass
@@ -310,7 +310,7 @@ ul.activity_tree
       display: inline
       width: 10px
     span
-      display: block
+      display: inline-block
       font-size: 1.4em
       font-weight: bold
       height: 13px
@@ -322,14 +322,10 @@ ul.activity_tree
       &.expanded
         background: #fff
         color: red
-        position: relative
-        top: 9px
         +border-radius(10px)
       &.collapsed
         background: #fff
         color: green
-        position: relative
-        top: 9px
         +border-radius(10px)
 
     ul
